For some reason I needed an explicit reference to FSharp.Core 4.3

--- a/FSharpPlus/FSharpPlus.fsproj
+++ b/FSharpPlus/FSharpPlus.fsproj
@@ -40,6 +40,7 @@
       <HintPath>..\packages\FsControl.1.0.7\lib\net40\FsControl.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="FSharp.Core, Version=4.3.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="mscorlib" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
