--- a/FSharpPlus/FSharpPlus.fsproj
+++ b/FSharpPlus/FSharpPlus.fsproj
@@ -35,16 +35,27 @@
     <WarningLevel>3</WarningLevel>
     <DocumentationFile>bin\Release\FSharpPlus.XML</DocumentationFile>
   </PropertyGroup>
+  <PropertyGroup Condition="$(TargetFrameworkVersion) == 'v3.5'">
+    <DefineConstants>$(DefineConstants);NET35</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition="$(TargetFrameworkVersion) != 'v3.5'">
+    <DefineConstants>$(DefineConstants);NOTNET35</DefineConstants>
+  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FsControl.Core">
+    <Reference Include="FsControl.Core" Condition="$(TargetFrameworkVersion) != 'v3.5'">
       <HintPath>..\packages\FsControl.1.0.7\lib\net40\FsControl.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="FSharp.Core, Version=4.3.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+    <Reference Include="FsControl.Core" Condition="$(TargetFrameworkVersion) == 'v3.5'">
+      <HintPath>..\lib\FsControl.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="FSharp.Core, Version=4.3.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" Condition="$(TargetFrameworkVersion) != 'v3.5'" />
+    <Reference Include="FSharp.Core, Version=2.3.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" Condition="$(TargetFrameworkVersion) == 'v3.5'" />
     <Reference Include="mscorlib" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Numerics" />
+    <Reference Include="System.Numerics" Condition="$(TargetFrameworkVersion) != 'v3.5'" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
